CRU-7360: fix overflow css (#1045)

--- a/client/components/MainRegion/reskin-styles.scss
+++ b/client/components/MainRegion/reskin-styles.scss
@@ -6,7 +6,8 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 100%;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: scroll;
   padding-top: $top-nav-height;
   transition: ease 0.3s all;
   width: 100%;
